--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         </div>
         <div>
         <h2 class="social"
-            link rel="socials"><a class="link" href="https://www.linkedin.com/in/natalie-collins/">linkedin.com/in/natalie-collins  |</a>   <a href="portfolio@portfolio.com">  Portfolio@portfolio.com</a> </h2>
+            link rel="socials"><a class="link" href="https://www.linkedin.com/in/natalie-collins/">linkedin.com/in/natalie-collins  |</a> <!--  <a href="portfolio@portfolio.com">  Portfolio@portfolio.com</a>  --> </h2>
             
         </div>
 
@@ -294,8 +294,8 @@
             </div>
 
             <div class="body">
-                <p>A personable and energetic people focussed digital interaction designer with a background in travel and entertainment.
-                    Educated in UX/UI and Web Development, passionate about creating and supporting innovative digital systems with a holistic view to give all, the best personal experience with a strong belief in “function over finesse”.</p>
+                <p>A personable and energetic people focussed digital interaction designer with a background in travel, hospitality and entertainment.
+                    Educated in UX/UI and Web Development, passionate about creating and supporting innovative digital systems with a holistic view to give all, the best personal experience with a strong belief in “function with finesse”.</p>
                 <br />
                 <p>Experienced leader in the dynamic travel industry and determined problem solver with a fine eye for detail whilst achieving big picture goals. Extensive professional experience in designing and supporting bespoke systems with a unique
                     ability to forge strong relationships with key stakeholders, making me an irreproachable collaborator.
@@ -312,28 +312,28 @@
             <div class="body">
                 <!-- FRAGMENTS -->
                 <div class="fragment">
-                    <h2>UX Research</h2>
+                    <h2>UX User Research</h2>
                     <p>Full stack workflow from ideation, definition and prioritisation to testing and iterated interface design</p>
-                </div>
-                <div class="fragment">
-                    <h2>Accessibility Evaluation</h2>
-                    <p>Adept in ensuring all industry standards are met without compromising design aesthetics</p>
                 </div>
                 <div class="fragment">
                     <h2>Project Mangement</h2>
                     <p>Agile management of stakeholder and team interests with result focuss abiding to time and financial limitations</p>
                 </div>
                 <div class="fragment">
-                    <h2>Visual Design Specification</h2>
-                    <p>High efficacy in applying design principals with modern innovation</p>
-                </div>
-                <div class="fragment">
-                    <h2>UI Atomic Design and Prototyping</h2>
-                    <p>Highly proficient across all industry standard design and testing tools</p>
-                </div>
-                <div class="fragment">
                     <h2>Interface Development</h2>
                     <p>Applied use of dev tools including HTML5, CSS, JavaScript and Bootstrap</p>
+                </div>
+                <div class="fragment">
+                    <h2>Accessibility and Heuristic Evaluation</h2>
+                    <p>Adept in ensuring all current designs are analysed and mapped intuitively</p>
+                </div>
+                <div class="fragment">
+                    <h2>User Stories, Flows and Journey Mapping </h2>
+                    <p>High efficacy in identifying and communicating user pain points with a focus on providing solutions </p>
+                </div>
+                <div class="fragment">
+                    <h2>Low-High Fidelity Prototyping and User Testing</h2>
+                    <p>Highly proficient in creating and communicating effective results using latest technology</p>
                 </div>
             </div>
         </section>
