link colour change
Changed to Harrison.ai logo colour

--- a/Design CV.html
+++ b/Design CV.html
@@ -160,7 +160,8 @@
         }
 
         .link{
-            color: blueviolet;
+            /* color: blueviolet; */
+            color: #1402A1;
             text-decoration: underline;
         }
         
