--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
         }
 
         .link{
-            color: blueviolet;
+            /* color: blueviolet; */
+            color:#1402A1;
             text-decoration: underline;
         }
         
