--- a/Design CV.html
+++ b/Design CV.html
@@ -354,6 +354,18 @@ stakeholders, making me an irreproachable collaborator.
             <div class="body">
                 <!-- SEGMENTS -->
                 <div class="segment">
+                    <h2>Concierge Manager</h2> <h3> 2021-2022</h3>
+                    <h3>Moseley Beach Club/ Glenelg, SA</h3> 
+                    <p> Management of bookings and exceeding guest expectation </p>
+                    <p>→ Represent the rdjones brand by providing exceptional customer service to VIPs and all guests on arrival also via phone and email,
+ensuring all reviews were a 4-5 star rating
+                    </p>
+                    <p>→ Build trusting relationships based on mutual respect with floor staff, booking turnover and walk in area ensuring improved profit year on year,
+resolving complaints and RSA situations supporting the safety of all guests 
+                    </p>
+                </div>
+
+                <div class="segment">
                     <h2>Corporate Travel Manager</h2> <h3> 2016-2020</h3>
                     <h3>FCM Travel Solutions/ Adelaide, SA</h3> 
                     <p> Expertise in travel solutions for large enterprise clients</p>
