--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- General Sans -->
     <link href="https://api.fontshare.com/css?f[]=general-sans@1&display=swap" rel="stylesheet">
     <!--  -->
-    <title>Design CV</title>
+    <title>Natalie CV</title>
     <!--  -->
     <style>
         /* MARLIN OVERRIDES */
@@ -295,11 +295,19 @@
             </div>
 
             <div class="body">
-                <p>A personable and energetic people focussed digital interaction designer with a background in travel, hospitality and entertainment.
-                    Educated in UX/UI and Web Development, passionate about creating and supporting innovative digital systems with a holistic view to give all, the best personal experience with a strong belief in “function with finesse”.</p>
-                <br />
-                <p>Experienced leader in the dynamic travel industry and determined problem solver with a fine eye for detail whilst achieving big picture goals. Extensive professional experience in designing and supporting bespoke systems with a unique
-                    ability to forge strong relationships with key stakeholders, making me an irreproachable collaborator.
+                <p>A personable and energetic people focussed digital 
+interaction designer with a background in travel and hospitality.
+                    Educated in UX/UI and Web Development, passionate 
+about creating and supporting innovative digital systems with a holistic
+ view to give all, the best personal experience with a strong belief in 
+“function over finesse”.</p>
+                <br>
+                <p>Experienced leader in the dynamic travel industry and
+ determined problem solver with a fine eye for detail whilst achieving 
+big picture goals. Extensive professional experience in designing and 
+supporting bespoke systems with a unique
+                    ability to forge strong relationships with key 
+stakeholders, making me an irreproachable collaborator.
                 </p>
             </div>
         </section>
@@ -307,34 +315,34 @@
         <!-- SECTION | TECHNICAL -->
         <section id="sectionTechnical">
             <div class="label">
-                <h2>Technical</h2>
+                <h2>Skills</h2>
             </div>
 
             <div class="body">
                 <!-- FRAGMENTS -->
                 <div class="fragment">
-                    <h2>UX User Research</h2>
-                    <p>Full stack workflow from ideation, definition and prioritisation to testing and iterated interface design</p>
+                    <h2>Brand Respresentation</h2>
+                    <p>True understanding and practice of the best first impression that coincides with brand concepts</p>
+                </div>
+                <div class="fragment">
+                    <h2>Customer Service</h2>
+                    <p>Providing customers a delightful experience from end to end, with a solutions focus and attention to detail</p>
                 </div>
                 <div class="fragment">
                     <h2>Project Mangement</h2>
-                    <p>Agile management of stakeholder and team interests with result focuss abiding to time and financial limitations</p>
+                    <p>Agile management of client, management and team interests with result focuss abiding to time and financial limitations</p>
+                </div>
+                <div class="fragment">
+                    <h2>Visual Design Specification</h2>
+                    <p>High efficacy in applying design principals with modern innovation</p>
+                </div>
+                <div class="fragment">
+                    <h2>Communication</h2>
+                    <p>Highly proficient and confident across all digital and personal forms of communication</p>
                 </div>
                 <div class="fragment">
                     <h2>Interface Development</h2>
                     <p>Applied use of dev tools including HTML5, CSS, JavaScript and Bootstrap</p>
-                </div>
-                <div class="fragment">
-                    <h2>Accessibility and Heuristic Evaluation</h2>
-                    <p>Adept in ensuring all current designs are analysed and mapped intuitively</p>
-                </div>
-                <div class="fragment">
-                    <h2>User Stories, Flows and Journey Mapping </h2>
-                    <p>High efficacy in identifying and communicating user pain points with a focus on providing solutions </p>
-                </div>
-                <div class="fragment">
-                    <h2>Low-High Fidelity Prototyping and User Testing</h2>
-                    <p>Highly proficient in creating and communicating effective results using latest technology</p>
                 </div>
             </div>
         </section>
@@ -348,112 +356,55 @@
             <div class="body">
                 <!-- SEGMENTS -->
                 <div class="segment">
+                    <h2>Concierge Manager</h2> <h3> 2021-2022</h3>
+                    <h3>Moseley Beach Club/ Glenelg, SA</h3> 
+                    <p> Management of bookings and exceeding guest expectation </p>
+                    <p>→ Represent the rdjones brand by providing exceptional customer service to VIPs and all guests on arrival also via phone and email,
+ensuring all reviews were a 4-5 star rating
+                    </p>
+                    <p>→ Build trusting relationships based on mutual respect with floor staff, booking turnover and walk in area ensuring improved profit year on year,
+resolving complaints and RSA situations supporting the safety of all guests 
+                    </p>
+                </div>
+
+                <div class="segment">
                     <h2>Corporate Travel Manager</h2> <h3> 2016-2020</h3>
                     <h3>FCM Travel Solutions/ Adelaide, SA</h3> 
                     <p> Expertise in travel solutions for large enterprise clients</p>
-                    <p>→ Provide agile and exceptional customer service to international and domestic travellers in fast paced environment, orchestrating
-                        travel schedules, supporting travel and financial documentation and technical support for multiple online travel systems including Serko and Concur.
+                    <p>→ Provide agile and exceptional customer service 
+to international and domestic travellers in fast paced environment, 
+orchestrating
+                        travel schedules, supporting travel and 
+financial documentation and technical support for multiple online travel
+ systems including Serko and Concur.
                     </p>
-                    <p>→ 92% client retention rate whilst meeting all KPIs and contributor to team global award 2017 for TTV and profit aswell as onboarding
-                        support and online system training for 3 new clients.
+                    <p>→ 92% client retention rate whilst meeting all 
+KPIs and contributor to team global award 2017 for TTV and profit aswell
+ as onboarding
+                        support and online system training for 3 new 
+clients.
                     </p>
                 </div>
                 <div class="segment">
                     <h2>Corporate Events and Group Travel Coordinator - Team Manager</h2> <h3> 2014-2016</h3>
                     <h3>Corporate Groups - CI Events / Adelaide, SA/WA</h3> 
                     <p>Management of 2 travel teams encompassing 4 brands</p>
-                    <p>→ Choreographing events and travel experiences for large corporate groups from various origins and designing bespoke online travel booking interfaces
-                        such as Cvent and Serko with respect to brand alliance and associated ROI reporting to key stakeholders.
+                    <p>→ Choreographing events and travel experiences 
+for large corporate groups from various origins and designing bespoke 
+online travel booking interfaces
+                        such as Cvent and Serko with respect to brand 
+alliance and associated ROI reporting to key stakeholders.
                     </p>
-                    <p>→ Increase in revenue by 32% within first 3 months of management role providing new capability in the online group booking sector, directly contributing to client retention in respective corporate travel brand.
-                    </p>
-                </div>
-                <div class="segment">
-                    <h2>Corporate Travel Consultant</h2>  <h3> 2010-2014</h3>
-                    <h3>Corporate Traveller / Adelaide, SA</h3>
-                    <p>Provide 'one stop shop' travel management for SME corporate clients</p>
-                    <p>→ Deliver exceptional customer service to international and domestic travellers whilst implementing internal travel policies, responsible for all
-                        financial documentation, collection and accounting and technical support and training for online booking systems. Accountability
-                        for meeting all monthly individual and team KPIs and ROI reporting to key client policy makers.            
-                    </p>
-                    <p>→ Individual and team Global awards for TTV and profit increase 2012 and multiple area awards year on year. Voluntary internal state technical support
-                        for new booking and accounting system rollout "Tramada".
+                    <p>→ Increase in revenue by 32% within first 3 
+months of management role providing new capability in the online group 
+booking sector, directly contributing to client retention in respective 
+corporate travel brand.
                     </p>
                 </div>
-                <div class="segment">
-                    <h2>Professional Entertainer - Lead Vocalist</h2>  <h3> 2006-2009</h3>
-                    <h3>"Mischief", "Jo Public"/ Adelaide, SA</h3>
-                    <p>Lead vocalist in 2 bands</p>
-                    <p>→ Bespoke play list creation for each performance. Motivating and engaging entertainer for corporate events with a reputation
-                        for reliability, exceptional presentation and personable manner.
-                    </p>
-                    <p>→ Residency held for 12months at popular restaurant and entertainment precinct and Christmas entertainer at popular winery
-                        for 3 consecutive years.
-                    </p>
-                </div>
-            </div>
-        </section>
 
                 <!-- SECTION | PROJECTS -->
-                <section id="sectionCareer">
-                    <div class="label">
-                        <h2>Projects</h2>
-                    </div>
-        
-                    <div class="body">
-                        <!-- SEGMENTS -->
-                        <div class="segment">
-                            <h2>Rosie</h2>
-                            <h3>A life saving mobile and smart watch app for women</h3> 
-                            <p>Concept design aimed at reducing the number of domestic violence cases against women and children using 
-                                a unique inconspicuous emergency services option that catches the purpetrator off guard.
-                            </p>
-                            <p>→ Skills: User Research using documented statistics, media documentaries and published studies, Persona Creation, User Journey, 
-                                Data Synthesis, Prioritisation Matrix, User Flows, Technology and legality investigation, UX and UI Design, Prototyping including Voice Activation, User Testing and web developed Style Guide
-                            </p>
-                            <p>→ Technology Used: Adobe XD, Figma, Trello, HTML5, CSS
-                            </p>
-                        </div>
 
-                        <div class="segment">
-                            <h2>Riding For The Disabled Association SA</h2>
-                            <h3>Not-for-profit Responsive Web Re-design</h3>
-                            <p>Expectation was to give a very deserving organisation's website a facelift, create a responsive design and overall improve the rate of
-                                financial donation and volunteer sign ups
-                            </p>
-                            <p>→ Skills: User Research (Interviews and Survey), Stakeholder Interviews, Prioritisation Matrix, Accessibility Assessment, Data Synthesis, Persona Creation, Information Architecture, In-person User Testing,
-                                 Project Management, Statement Writing and Imagery    
-                            </p>
-                            <p>→ Technology Used: Figma, Miro, Trello
-                            </p>
-                        </div>
 
-                        <div class="segment">
-                            <h2>Clean Energy Regulator</h2>
-                            <h3>Government Website Responsive Re-design</h3> 
-                            <p>Requirement was to improve the navigation, accessibility and usability of this site for users at all levels of Clean Energy understanding.</p>
-                            <p>→ Skills: Heuristic Evaluation, Accessibility Assessment, Information Architecture, Sitemapping, Persona Creation, Responsive UX Design, Wireframing, Interaction Design, Prototyping, In-person and remote User Testing,
-                                 Typography and Iconography                              
-                            </p>
-                            <p>→ Technology Used: Adobe XD, Miro
-                            </p>
-                        </div>
-
-                        <div class="segment">
-                            <h2>My Tradie</h2>
-                            <h3>A property owner's best friend when needing a tradie they can trust</h3>
-                            <p>Concept app for mobile that connects property owners with local tradies in the interest of improving the tradie/ client relationship through
-                                better communication and transparency, creating repeat business and a happy customer.
-                            </p>
-                            <p>→ Skills: User Research (Interviews and Survey), Competitor Analysis, Feature Prioritisation, Data Synthesis, Persona Creation, Empathy Mapping, Information Architecture, User Flow, User Experience Design,
-                                Wireframing, Interaction Design, Prototyping, In-person User Testing and Project Management
-                                
-                            </p>
-                            <p>→ Technology Used: Figma, Miro, Trello
-                            </p>
-                        </div>
-                    </div>
-                </section>
 
         <!-- SECTION | EDUCATION -->
         <section id="sectionCareer">
@@ -483,3 +434,5 @@
 </body>
 
 </html>
+
+
