--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ interaction designer with a background in travel and hospitality.
                     Educated in UX/UI and Web Development, passionate 
 about creating and supporting innovative digital systems with a holistic
  view to give all, the best personal experience with a strong belief in 
-“function over finesse”.</p>
+“function with finesse”.</p>
                 <br>
                 <p>Experienced leader in the dynamic travel industry and
  determined problem solver with a fine eye for detail whilst achieving 
@@ -401,7 +401,7 @@ booking sector, directly contributing to client retention in respective
 corporate travel brand.
                     </p>
                 </div>
-
+            </section>
                 <!-- SECTION | PROJECTS -->
 
 
