--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
         }
 
         .link{
-            /* color: blueviolet; */
-            color:#1402A1;
+            /* color: violet; */
+            color: #8b04fa;ee;
             text-decoration: underline;
         }
         
@@ -295,15 +295,12 @@
             </div>
 
             <div class="body">
-                <p>A personable and energetic people focussed digital 
-interaction designer with a background in travel and hospitality.
-                    Educated in UX/UI and Web Development, passionate 
-about creating and supporting innovative digital systems with a holistic
- view to give all, the best personal experience with a strong belief in 
-“function with finesse”.</p>
+                <p>A personable and driven sales and service professional with a background in travel and hospitality, achieving with integrity and loyalty.
+                    Educated in UX/UI and Web Development and a Diploma in Business Management, passionate about creating solutions with a holistic approach
+and a strong belief in mutually beneficial outcomes.</p>
                 <br>
                 <p>Experienced leader in the dynamic travel industry and
- determined problem solver with a fine eye for detail whilst achieving 
+ resourceful initiator with a fine eye for detail whilst achieving 
 big picture goals. Extensive professional experience in designing and 
 supporting bespoke systems with a unique
                     ability to forge strong relationships with key 
@@ -321,28 +318,28 @@ stakeholders, making me an irreproachable collaborator.
             <div class="body">
                 <!-- FRAGMENTS -->
                 <div class="fragment">
-                    <h2>Brand Respresentation</h2>
-                    <p>True understanding and practice of the best first impression that coincides with brand concepts</p>
+                    <h2>Account Management</h2>
+                    <p>High client retention through nurtured relationships whilst sustaining high revenue margin and representing brand values</p>
                 </div>
                 <div class="fragment">
                     <h2>Customer Service</h2>
-                    <p>Providing customers a delightful experience from end to end, with a solutions focus and attention to detail</p>
+                    <p>Consistenly providing a delightful experience from end to end, utilising empathy and attention to detail</p>
                 </div>
                 <div class="fragment">
                     <h2>Project Mangement</h2>
-                    <p>Agile management of client, management and team interests with result focuss abiding to time and financial limitations</p>
+                    <p>Agile management of client, management and team interests with result focus abiding to time and financial limitations</p>
                 </div>
                 <div class="fragment">
-                    <h2>Visual Design Specification</h2>
-                    <p>High efficacy in applying design principals with modern innovation</p>
+                    <h2>Travel Data Analysis</h2>
+                    <p>Great efficacy in translating travel data into meaningful reports and presenting with advice to clientele</p>
                 </div>
                 <div class="fragment">
                     <h2>Communication</h2>
-                    <p>Highly proficient and confident across all digital and personal forms of communication</p>
+                    <p>Thoroughly proficient across all digital forms of communication and confident conversationalist</p>
                 </div>
                 <div class="fragment">
-                    <h2>Interface Development</h2>
-                    <p>Applied use of dev tools including HTML5, CSS, JavaScript and Bootstrap</p>
+                    <h2>Travel System Application</h2>
+                    <p>Adept in Galileo, Sabre, Self Ticketing, Lumina, Serko, Concur, Tramada, Cvent, Salesforce and an adaptable learner </p>
                 </div>
             </div>
         </section>
